--- a/SunflowarZ/SunflowarZ.vcxproj
+++ b/SunflowarZ/SunflowarZ.vcxproj
@@ -151,13 +151,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AirCellZ.h" />
     <ClInclude Include="CellZ.h" />
+    <ClInclude Include="GroundCellZ.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RockCellZ.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AirCellZ.cpp" />
     <ClCompile Include="CellZ.cpp" />
+    <ClCompile Include="GroundCellZ.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="pch.cpp">
@@ -166,6 +171,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RockCellZ.cpp" />
     <ClCompile Include="SunflowarZ.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
