--- a/SunflowarZ/SunflowarZ.vcxproj
+++ b/SunflowarZ/SunflowarZ.vcxproj
@@ -155,7 +155,7 @@
     <ClInclude Include="CellZ.h" />
     <ClInclude Include="GroundCellZ.h" />
     <ClInclude Include="MainMenu.h" />
-    <ClInclude Include="Map.h" />
+    <ClInclude Include="MapZ.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RockCellZ.h" />
   </ItemGroup>
@@ -164,7 +164,7 @@
     <ClCompile Include="CellZ.cpp" />
     <ClCompile Include="GroundCellZ.cpp" />
     <ClCompile Include="MainMenu.cpp" />
-    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="MapZ.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
