--- a/SunflowarZ/SunflowarZ.vcxproj
+++ b/SunflowarZ/SunflowarZ.vcxproj
@@ -151,18 +151,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CollisionControllerZ.h" />
+    <ClInclude Include="GameZ.h" />
+    <ClInclude Include="ObjectZ.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="ProjectZ.h" />
     <ClInclude Include="SunflowerZ.h" />
+    <ClInclude Include="WeaponZ.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CollisionControllerZ.cpp" />
+    <ClCompile Include="GameZ.cpp" />
+    <ClCompile Include="ObjectZ.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ProjectZ.cpp" />
     <ClCompile Include="SunflowarZ.cpp" />
     <ClCompile Include="SunflowerZ.cpp" />
+    <ClCompile Include="WeaponZ.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
