--- a/SunflowarZ/SunflowarZ.vcxproj
+++ b/SunflowarZ/SunflowarZ.vcxproj
@@ -151,17 +151,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AirCellZ.h" />
+    <ClInclude Include="CellZ.h" />
     <ClInclude Include="CollisionControllerZ.h" />
     <ClInclude Include="GameZ.h" />
+    <ClInclude Include="GroundCellZ.h" />
+    <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="MapZ.h" />
     <ClInclude Include="ObjectZ.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="ProjectZ.h" />
+    <ClInclude Include="RockCellZ.h" />
     <ClInclude Include="SunflowerZ.h" />
     <ClInclude Include="WeaponZ.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AirCellZ.cpp" />
+    <ClCompile Include="CellZ.cpp" />
     <ClCompile Include="CollisionControllerZ.cpp" />
     <ClCompile Include="GameZ.cpp" />
+    <ClCompile Include="GroundCellZ.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="MapZ.cpp" />
+    <ClCompile Include="NYTimer.cpp" />
     <ClCompile Include="ObjectZ.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -170,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="ProjectZ.cpp" />
+    <ClCompile Include="RockCellZ.cpp" />
     <ClCompile Include="SunflowarZ.cpp" />
     <ClCompile Include="SunflowerZ.cpp" />
     <ClCompile Include="WeaponZ.cpp" />
