--- a/SunflowarZ/SunflowarZ.vcxproj
+++ b/SunflowarZ/SunflowarZ.vcxproj
@@ -23,32 +23,32 @@
     <ProjectGuid>{479259EC-4ED7-4B03-B19B-F078B93F5D34}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>SunflowarZ</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -156,6 +156,7 @@
     <ClInclude Include="CollisionControllerZ.h" />
     <ClInclude Include="EntityManagerZ.h" />
     <ClInclude Include="EntityZ.h" />
+    <ClInclude Include="EntityZFactoryZ.h" />
     <ClInclude Include="GameZ.h" />
     <ClInclude Include="GroundCellZ.h" />
     <ClInclude Include="MainMenu.h" />
@@ -173,6 +174,7 @@
     <ClCompile Include="CollisionControllerZ.cpp" />
     <ClCompile Include="EntityManagerZ.cpp" />
     <ClCompile Include="EntityZ.cpp" />
+    <ClCompile Include="EntityZFactoryZ.cpp" />
     <ClCompile Include="GameZ.cpp" />
     <ClCompile Include="GroundCellZ.cpp" />
     <ClCompile Include="MainMenu.cpp" />
