--- a/SunflowarZ/SunflowarZ.vcxproj.filters
+++ b/SunflowarZ/SunflowarZ.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="EntityZ.cpp" />
     <ClCompile Include="EntityManagerZ.cpp" />
     <ClCompile Include="EntityZFactoryZ.cpp" />
+    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CollisionControllerZ.h" />
@@ -37,5 +38,6 @@
     <ClInclude Include="EntityZ.h" />
     <ClInclude Include="EntityManagerZ.h" />
     <ClInclude Include="EntityZFactoryZ.h" />
+    <ClInclude Include="Util.h" />
   </ItemGroup>
 </Project>
